objects/CSIRCD__WatchListQ__c.object
<CustomObject>
    <customHelpPage>CSIRCD__CSIHelp</customHelpPage>
    <description>Holds data that needs to be sent to ATTUS for watch list screening.</description>
    <fields>
        <fullName>CSIRCD__ATBATCHID__c</fullName>
        <label>ATBATCHID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSIRCD__ATTUSID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ATTUSID</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSIRCD__City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSIRCD__Company_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Company Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSIRCD__Country__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSIRCD__Date_Sent__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CSIRCD__EditType__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>EditType</label>
        <length>1</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSIRCD__First_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSIRCD__Last_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSIRCD__Postal_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Postal Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSIRCD__SFID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SFID</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSIRCD__State__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>State</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSIRCD__Street_Address__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Street Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>CSI Watch List Q</label>
    <listViews>
        <fullName>CSIRCD__All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CSIRCD__EditType__c</columns>
        <columns>CSIRCD__SFID__c</columns>
        <columns>CSIRCD__ATTUSID__c</columns>
        <columns>CSIRCD__ATBATCHID__c</columns>
        <columns>CSIRCD__Date_Sent__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>WatchListQ Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CSI Watch List Qs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>